# Diff-FIT

./: README.md  pyproject.toml
data/generated_images/images/demo_images/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json
data/generated_images/images/lightning5/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json
data/generated_images/inpainted_images/demo_images/hair_color/blonde_to_dark brown/: 0006.json
data/generated_images/inpainted_images/demo_images/hair_color/dark brown_to_blonde/: 0008.json  0009.json
data/generated_images/inpainted_images/lightning5/facial_hair/beard_to_no facial hair/: 0001.json  0014.json  0015.json  0019.json
data/target_images/target_00/: history.csv
diff_fit/: __init__.py  constants.py  face_generation.py  face_inpaint.py  face_transformation.py  frontend.py  image_slider_fix.py  utils.py
diff_fit/generation_utils/: constants.py  face_generation_utils.py
diff_fit/inpaint_utils/: constants.py  utils.py
diff_fit/transformation_utils/: constants.py  utils.py
face_parsing/: inference.py
face_parsing/segmentation_models/: bisenet.py  resnet.py
generate_images/: __init__.py  config.py  generate_images.py  generate_img2img_images.py  generate_inpainting_images.py
lightning_drag/: __init__.py
lightning_drag/drag_utils/: ui_utils.py
lightning_drag/models/: appearance_encoder.py  attention_processor.py  ip_adapter.py  mutual_self_attention.py
lightning_drag/pipeline/: lightningdrag_pipeline.py
lightning_drag/utils/: ui_utils.py
(+95 files in other folders)
